# minecraft-status-bot-rs

./: .gitignore  Cargo.toml
src/: help.rs  main.rs  ping.rs  status.rs
src/assets/: help_message.txt  status_response_template.txt
src/mcsrvstat/: mod.rs
