[package]
name = "minecraft_server_status_bot"
version = "0.6.0"
authors = ["Jakub Tomana <jakub.tomana@protonmail.com>"]
edition = "2018"

[dependencies]
serenity = "0.6.3"
reqwest = "0.9.8"
serde_json = "1.0"
lazy_static = "1.3.0"
cairo-rs = {version = "0.7.1",features = ["png"]}
jpeg-decoder = "0.1.15"
log = "0.4.0"
env_logger = "0.6.2"